fix for overflow text in input

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -8,5 +8,5 @@
 }
 
 .inpt {
-  @apply bg-white p-2 border-2  text-lg rounded-md
+  @apply bg-white border-2 px-2  rounded-md
 }
